Sat Sep 20 22:16:40 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-generator.cc sfidl-module.cc: Use sequentialValue where
	appropriate.

	* sfidl-parser.*: Compute two values for each ChoiceValue: one
	containing the assigned value for the server side C/C++ language
	binding and one containing a sequential number for the client side
	C/C++ language binding.

Mon Sep  8 00:31:10 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* gbsearcharray.h: inserted casts for C++.

Sun Sep  7 17:36:43 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-generator.* sfidl-module.cc sfidl-parser.*: reintroduce const
	for datastructures containing maps - to be able to access their
	contents, added a new template class called Map<Key,Value> with a
	const get(Key) function.

Thu Sep  4 14:58:14 2003  Tim Janik  <timj@gtk.org>

	* sfidl-module.cc: introduce static data for the generated classes.
	added set_property_changed() method to Base class to allow hooking
	into property setting.

	* glib-extra.[hc]: removed double array implementation which
	was mostly unused.

Wed Sep  3 00:56:42 2003  Tim Janik  <timj@gtk.org>

	* sfidl-module.cc: reworked generated plugin code to allow
	derivation from the generated object and to integrate with
	the new BSE export mechanisms. also, procedure implementations
	in plugins are now supported.

Fri Aug 29 18:17:49 2003  Tim Janik  <timj@gtk.org>

	* bse-plugin-generator.cc: cvs rename.

Tue Aug 26 08:57:54 2003  Tim Janik  <timj@gtk.org>

	* sfidl-module.[hc]*: fixed buglet.

	* bse-module-generator.[hc]*: new parser/code-generator front-end
	that just uses the Module code generator and parses .mdef files
	(module definition files).

	* sfidl-generator.[hc]*: renamed from sfild.* (per cvs-copy).
	stripped to contain only code-generator code.
	
	* sfidl.h: removed.
	* sfidl.cc: stripped to contain only main().
	
Mon Aug 25 19:34:05 2003  Tim Janik  <timj@gtk.org>

	* sfidl-module.cc: generate only a single object header file