@@ -27,8 +27,12 @@
 #include "sfidl-parser.h"
 #include "sfidl-module.h"
 #include "sfiparams.h" /* scatId (SFI_SCAT_*) */
+#include "topconfig.h"
 
 #define PRG_NAME "bse-plugin-generator"
+
+/* FIXME: should be filled out and written into topconfig.h by configure */
+#define SFIDL_VERSION        BST_VERSION
 
 using namespace Sfidl;
 using namespace std;
@@ -39,6 +43,9 @@ usage ()
   g_print ("usage: %s [options] <input.mdef>\n", PRG_NAME);
   g_print (" -h, --help                  print usage information\n");
   g_print (" -I <directory>              add this directory to the include path\n");
+  g_print (" --version                   print version\n");
+  g_print (" --print-include-path         print include path\n");
+  g_print (" --nostdinc                  don't use standard include path\n");
 }
 
 
@@ -48,6 +55,15 @@ main (int   argc,
 {
   Options options;      // need options singleton
   gint i, e;
+
+  bool printIncludePath = false;
+  bool printVersion = false;
+  bool noStdInc = false;
+
+  if (argc && argv[0])
+    options.sfidlName = argv[0];
+  else
+    options.sfidlName = PRG_NAME;
 
   /* roll own option parsing as Options is sfidl specific */
   for (i = 1; i < argc; i++)
@@ -72,6 +88,21 @@ main (int   argc,
             }
           argv[i] = NULL;
         }
+      else if (strcmp ("--print-include-path", argv[i]) == 0)
+	{
+	  printIncludePath = true;
+	  argv[i] = NULL;
+	}
+      else if (strcmp ("--version", argv[i]) == 0)
+	{
+	  printVersion = true;
+	  argv[i] = NULL;
+	}
+      else if (strcmp ("--nostdinc", argv[i]) == 0)
+	{
+	  noStdInc = true;
+	  argv[i] = NULL;
+	}
     }
 
   /* collapse parsed options */
@@ -91,6 +122,41 @@ main (int   argc,
     }
   if (e)
     argc = e;
+
+  /* add std include path */
+  if (!noStdInc)
+    {
+      char *x = g_strdup (SFIDL_PATH_STDINC);
+      char *dir = strtok (x, G_SEARCHPATH_SEPARATOR_S);
+      while (dir && dir[0])
+	{
+	  options.includePath.push_back (dir);
+	  dir = strtok (NULL, G_SEARCHPATH_SEPARATOR_S);
+	}
+      g_free (x);
+    }
+
+  /* include path / version */
+  if (printIncludePath)
+    {
+      bool first = true;
+      for (std::vector<std::string>::const_iterator ii = options.includePath.begin(); ii != options.includePath.end(); ii++)
+	{
+	  if (!first)
+	    printf (":");
+	  else
+	    first = false;
+	  printf ("%s", ii->c_str());
+	}
+      printf ("\n");
+      return 0;
+    }
+
+  if (printVersion)
+    {
+      printf ("%s %s\n", PRG_NAME, SFIDL_VERSION);
+      return 0;
+    }
 
   /* verify file presence */
   if (argc != 2)
